优化订阅处理逻辑，复用解析结果以减少冗余计算，添加 `equals` 和 `hashCode` 方法以支持主题去重